<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentTwo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_two_label" />

    <Button
        android:id="@+id/btn_click_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_one" />

    <Button
        android:id="@+id/btn_click_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_three"/>

    <Button
        android:id="@+id/btn_clock_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_four"/>

    <LinearLayout
        android:id="@+id/ll_frag_two_stuff"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_frag_two_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_count"
            tools:text="Count = 3"/>

        <Button
            android:id="@+id/btn_frag_two_clicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clicker" />

    </LinearLayout>

</LinearLayout>