<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentOne">

    <fragment
        android:id="@+id/fragmentOne"
        android:name="com.example.navigationsample.FragmentOne"
        android:label="@string/fragment_one_label"
        tools:layout="@layout/fragment_one">
        <action
            android:id="@+id/action_fragmentOne_to_fragmentTwo"
            app:destination="@id/fragmentTwo" />
    </fragment>
    <fragment
        android:id="@+id/fragmentTwo"
        android:name="com.example.navigationsample.FragmentTwo"
        android:label="@string/fragment_two_label"
        tools:layout="@layout/fragment_two" >
        <action
            android:id="@+id/action_fragmentTwo_to_fragmentOne"
            app:destination="@id/fragmentOne" />
        <action
            android:id="@+id/action_fragmentTwo_to_fragmentThree"
            app:destination="@id/fragmentThree" />
        <action
            android:id="@+id/action_fragmentTwo_to_fragmentFour"
            app:destination="@id/fragmentFour" />
    </fragment>
    <fragment
        android:id="@+id/fragmentThree"
        android:name="com.example.navigationsample.FragmentThree"
        android:label="@string/fragment_three_label"
        tools:layout="@layout/fragment_three" />
    <fragment
        android:id="@+id/fragmentFour"
        android:name="com.example.navigationsample.FragmentFour"
        android:label="@string/fragment_four_label"
        tools:layout="@layout/fragment_four" />
</navigation>